# rlcoach

./: .env.example  .gitignore  AGENTS.md  AUTONOMOUS_BUILD_CLAUDE.md  AUTONOMOUS_BUILD_CODEX_v2.md  CLAUDE.md  CONTEXT.md  IMPLEMENTATION_PLAN.md  MECHANICS_DETECTION.md  MECHANICS_IMPLEMENTATION_PLAN.md  MECHANICS_IMPLEMENTATION_PLAN_v2.md  MECHANICS_SPEC.md  Makefile  PRODUCT_SPEC_BRAINSTORM.md  RANK_BENCHMARKS_MASTER.md  README.md  SAAS_FIXES_PLAN.md  SECURITY_FIXES.md  SPEC.md  UX_IMPLEMENTATION_PLAN.md  alembic.ini  autonomous_build_mode_codex.md  coverage.json  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  project-overview.md  pyproject.toml  rlcoach.toml  services.yaml.bak  testing_replay.replay
.claude/: autonomous-loop.json
.factory/: init.sh
.github/: dependabot.yml
.github/branch-protection/: main.json
.github/workflows/: apply-branch-protection.yml  ci.yml  codeql.yml  deploy.yml
.next/: trace
Replay_files/: 0925.replay  4985385d-2a6a-4bea-a312-8e539c7fd098.replay  6804bd43-5415-49f4-b7d0-31b168c871ed.replay  70c0e78e-ea32-4722-a951-937baa40efc9.replay  77253f53-0654-4565-b18e-e77ddbb84282.replay  testing_replay.replay
Replay_files/ballchasing_output/: 0925_players.csv  0925_teams.csv
assets/replays/: README.md
backend/: Dockerfile
codex/Plans/: 0925-ballchasing-parity-plan.md  1015_boost_pickup_rewrite_followup_plan.md  2025-11-26-coaching-data-enhancements.md  2026-02-10-parser-refactor-update-plan.md  fix_analysis_issues_plan.md  kickoff_strategy_rework_plan.md  missing-mechanics.md  rlcoach_implementation_plan.md
codex/docs/: 2025-09-12-implementation-audit.json  2026-04-09-rust-parser-mission-handoff.md  LOG_TEMPLATE.md  code-review-2026-01-06.md  code-review-2026-01-08.md  gpt5-agentic-workflow-guide.md  gpt5-codex-ticketing-guide.md  gpt5-prompting-best-practices-guide.md  json-report-markdown-mapping.md  master_status.md  network-frames-integration-issue-report.md  network-frames-integration-issue.md  parser_adapter.md  replay_analysis_prompt.md  ticket_example.yaml  ui.md
codex/logs/: 001.md  002.md  004-parser-adapter-implementation.md  006.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  2024-09-25-ballchasing-parity-harness.md  2025-09-08-005-normalization-layer.md  2025-09-08-claude-003.md  2025-09-09-codex-agent-session.md  2025-09-09-network-frames.md  2025-09-09-network-parse-stabilization.md  2025-09-09-normalization-events.md  2025-09-16-codex-cli.md  2025-09-17-markdown-dossier.md  2025-09-17-rust-events-telemetry.md  2025-09-25-session.md  2025-09-26-doc-refresh.md  2025-10-15-project-overview.md  2025-10-15-rust-pad-registry-authority.md  2025-10-20-boost-pad-ground-truth.md  2025-10-20-boost-telemetry-champions-field.json  2025-10-20-boost-telemetry-neo-tokyo.json  2025-10-20-boost-telemetry-wasteland.json  2025-11-20-ballchasing-parity.md  2025-12-27-boost-movement-null-debug.md  2025-12-27-movement-metrics-expansion.md  2025-12-27-report-is-me.md  2025-12-27-single-replay-pipeline.md  2026-04-09-rust-parser-mission-closeout.md
codex/reviews/: 2026-02-26-saas-phase6-review.md
codex/tickets/: 002-schema-and-validator.md  008-analysis-movement-positioning.md  009-analysis-passing-possession.md  010-analysis-challenges-kickoffs.md  011-report-generator-cli.md  012-golden-tests-and-fixtures.md  013-rust-parser-adapter.md  014-optional-local-ui.md  2025-09-08-001-repo-scaffold.md  2025-09-08-003-ingestion-and-validation.md  2025-09-08-004-parser-adapter-interface.md  TICKET_TEMPLATE.md  (+23 more)
docs/: BUG_AUDIT.md  DASHBOARD_FIX_PLAN.md  GAPS_AUDIT.md  HETZNER_DEPLOYMENT.md  UI_AUDIT.md  api.md  cli-agents-reference.md  deployment.md  parser_adapter.md  rlcoach_saas_review.md  user-guide.md
examples/: replay_report.error.json  replay_report.success.json
frontend/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
gui/: package-lock.json  package.json  vite.config.ts
migrations/: env.py
monitoring/: alerting-rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
nginx/: Dockerfile  nginx.conf
schemas/: boost_pad_tables.json  replay_report.schema.json
scripts/: backup.sh  boost_parity_summary.py  check_coverage_categories.py  collect_boost_telemetry.py  diff_boost_parity.py  load_test.py  parser_corpus_health.py  restore.sh  rotate-secrets.sh  run-backend-dev.sh  seed_dev_replays.py
tests/: test_analysis_boost.py  test_analysis_challenges.py  test_analysis_fundamentals.py  test_analysis_kickoffs.py  test_analysis_mechanics_advanced.py  test_analysis_mechanics_contract.py  test_analysis_movement.py  test_analysis_new_modules.py  test_analysis_passing.py  test_analysis_positioning.py  test_benchmarks.py  test_cli_additional.py  test_cli_benchmarks.py  test_cli_config.py  test_cli_refactor.py  test_config.py  test_data_benchmarks.py  test_docs_parser_contract.py  test_env_example.py  test_events.py  test_events_calibration_synthetic.py  test_field_constants.py  test_goldens.py  test_identity.py  test_ingest.py  test_ingest_pipeline.py  test_main_module.py  test_metrics.py  test_normalize.py  test_parser_interface.py  test_report_end_to_end.py  test_report_markdown.py  test_report_metadata.py  test_rust_adapter.py  test_schema_validation.py  test_schema_validation_hardening.py  test_smoke.py  test_ui.py  test_version.py  test_watcher.py
worker/: Dockerfile
(+307 files in other folders)
