[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlcoach"
version = "0.1.0"
description = "All-local Rocket League replay analysis tool for comprehensive performance coaching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0.0",
    # API & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Background tasks
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # Payments & Auth
    "stripe>=8.0.0",
    "PyJWT>=2.8.0",
    # AI Coach
    "anthropic>=0.40.0",
    # Storage & Backups
    "b2sdk>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
]
authors = [
    {name = "rlcoach contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
rlcoach = "rlcoach.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "maturin>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
markers = ["slow: slower or optional tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
